Fix carousel slide overlap

--- a/css/style.css
+++ b/css/style.css
@@ -369,6 +369,7 @@ ul {
 }
 
 .carousel-slide {
+    background-color: #212121;
     transition: opacity 0.6s ease;
 }
 
